INCLUDES=-I..

lib_LTLIBRARIES = libPixelCity.la

libPixelCity_la_SOURCES = \
	Building.cpp \
	Camera.cpp \
	Car.cpp \
	Deco.cpp \
	Entity.cpp \
	GetTickCount.c \
	glBbox.cpp \
	glMatrix.cpp \
	glQuat.cpp \
	glRgba.cpp \
	glVector2.cpp \
	glVector3.cpp \
	Light.cpp \
	Math.cpp \
	Mesh.cpp \
	PixelCity.cpp \
	Sky.cpp \
	Texture.cpp \
	Visible.cpp \
	World.cpp
